feat(sidecar): implemented the business logic behind the ext-auth proxy
